--- a/src/routes/contact/contact.html
+++ b/src/routes/contact/contact.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang = "en">
+  <head>
+    <link rel="stylesheet" href="contact.css">
+  </head>
   <div class = "container">
     <div class = "header">
       <h1>CONTACT US &nbsp;</h1>
